--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,17 @@
 <resources>
-    <string name="app_name">Stock Hawk</string>
+    <string name="app_name" translatable="false">Stock Hawk</string>
 
-    <string name="action_example">Example action</string>
+    <string name="action_example" translatable="false">Example action</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_change_units">Change Units</string>
     <string name="symbol_search">Symbol Search</string>
     <string name="content_test">Search for a Stock Symbol</string>
-    <string name="input_hint">FB</string>
+    <string name="input_hint" translatable="false">FB</string>
     <string name="input_prefill"></string>
     <string name="network_toast">Uh-oh! This app requires an internet connection</string>
-    <string name="title_activity_graph_chart">graphChart</string>
-    <string name="title_activity_charts">Charts</string>
+    <string name="title_activity_graph_chart" translatable="false">graphChart</string>
+    <string name="title_activity_charts" translatable="false">Charts</string>
+    <string name="add_stocks_button_description">Press this button to add stocks.</string>
+    <string name="stock_value_over_time">Press here to see stock value over time.</string>
 </resources>
